--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 
 === version history for XML::LibXML::Simple
 
+version 0.15: Thu Apr 28 10:22:34 CEST 2011
+	Fixes:
+	- parser object recreated each time, because it cannot be
+	  reused (any more?). [Didier Brun]
+
 version 0.14: Fri Jul 16 11:17:49 CEST 2010
 	Fixes:
 	- do not use /bin/pwd in t/99pod.t
