--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 
 === version history for XML::LibXML::Simple
 
+version 0.92: Fri Dec 21 12:22:16 CET 2012
+
+	Fixes:
+	- include license in the manuals.
+
 version 0.91: Mon Jul 11 22:40:02 CEST 2011
 	Fixes:
 	- forcearray option with one element
