--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 === version history for XML::LibXML::Simple
 
+version 0.93:
+	- move pod-test to xt/
+
 version 0.92: Fri Dec 21 12:22:16 CET 2012
 
 	Fixes:
