--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
 
 === version history for XML::LibXML::Simple
 
+version 0.95: Mon Dec 22 08:19:53 CET 2014
+
+	Fixes:
+	- content-key collapse did not work with any key value of 0.
+
+	Improvements:
+	- doc: be clear that an XML::LibXML node can be used as source
+	  for XMLin as well [Salve J. Nilsen]
+	- doc: cleaner SYNOPSIS, minor reorganisation.
+
 version 0.94: Sat Jun  7 22:39:23 CEST 2014
 
 	Improvements:
