--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 
 === version history for XML::LibXML::Simple
 
-version 1.00:
+version 1.00: Wed 15 Jan 11:57:43 CET 2020
 
 	Changes:
 	- require perl 5.10
