--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 
 version 1.01:
 
+	Fixes:
+	- README.md contained info of other project.
+
 version 1.00: Wed 15 Jan 11:57:43 CET 2020
 
 	Changes:
