--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
 
 === version history for XML::LibXML::Simple
 
-version 1.01:
+version 1.01: Wed 15 Jan 2020 10:47:10 PM CET
+
+	Changes:
+	- Slaven needs 5.8 to be supported for his processed.  Reinstated.
+	  rt.cpan.org#131486 [Slaven Rezic]
 
 	Fixes:
 	- README.md contained info of other project.
